Fix up layout of message on mobile

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
@@ -31,18 +31,8 @@ mat-panel-description {
 .formatting-options-container {
   display: flex;
   column-gap: 16px;
-  align-items: center;
 
   button {
-    flex-shrink: 0;
-  }
-
-  .new-label {
-    color: var(--draft-history-entry-new-label-color);
-    font-weight: 500;
-  }
-
-  .new-arrow {
     flex-shrink: 0;
   }
 }
@@ -97,6 +87,20 @@ strong {
 }
 
 .new-formatting-options-notice {
-  display: flex;
-  gap: 0.5rem;
+  margin-top: 7px;
+}
+
+.new-and-arrow-wrapper {
+  display: inline-flex;
+  align-items: baseline;
+}
+
+.new-arrow {
+  padding-right: 0.5rem;
+  align-self: end;
+}
+
+.new-label {
+  color: var(--draft-history-entry-new-label-color);
+  font-weight: 500;
 }
